--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -6,6 +6,10 @@
 \begin{document}
 \maketitle
 
+\section{Introduction}
+We have chosen to use Z3 for solving all of the assignments. In particular we
+use the pythonic Z3 library.
+
 \section{Pallets}
 
 
