Report and robot

--- a/part2/report/paper.tex
+++ b/part2/report/paper.tex
@@ -28,6 +28,20 @@ Bram Pulles (s1015194, \href{mailto:bram.pulles@ru.nl}{bram.pulles@ru.nl})}
 \begin{document}
 \maketitle
 
-
+\section{Groups} % (fold)
+\label{sec:groups}
+\begin{enumerate}[label=\alph*)]
+\item 
+	Using prover9 we can prove that $I*x=x$, $inv(inv(x))=x$ and $inv(x)*x=I$.\\
+	However, it is not true in general that $inv(x*y)=inv(x)*inv(y)$.\\
+	The smallest group for which this does not hold has size $6$.
+\item 
+	The smallest non-Abelian group has size $6$.
+\item 
+	For $n=2$ all such groups are Abelian.\\
+	For $n=3$ the group is not Abelian in general and the smallest counterexample has size $27$.\\
+	For $n=4$ the group is not Abelian and the smallest counterexample has size $8$.
+\end{enumerate}
+% section groups (end)
 
 \end{document}
